Added Contacts by company date added report

--- a/Translations/en_US/messages.ini
+++ b/Translations/en_US/messages.ini
@@ -1,3 +1,6 @@
 mautic.customreport.report.source.created_contact="Source url of created contacts"
 mautic.customreport.report.date_added="Source date added"
 mautic.customreport.report.hits="Number of sources"
+mautic.customreport.report.contact.company_dateadded="Contacts by company date added"
+mautic.customreport.report.attribution.stage_date_added="Stage Date Added"
+
